# gaia-aurora

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CALIBRATION.md  CLAUDE.md  GAIA debugging and meta learning.txt  GAIA_BIBLE.md  GAIA_ContextWindows.txt  GAIA_MANIFEST.md  GAIA_PRD.md  GECO_AUDIT.md  GECO_Q8_Q12_Q18_VERIFICATION.md  GECO_REVIEW_MATRIX.md  PHASE_1_COMPLETE.md  PHASE_2_3_CODE_REVIEW.md  PHASE_2_3_IMPLEMENTATION_SUMMARY.md  PHASE_2_3_VALIDATION_SCENARIOS.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_3_HANDOFF.md  PHASE_3_INDEX.md  PREDICTIVE_GAIA_SPEC.md  README.md  SR_COUNCIL_ANALYSIS.md  VERSION_LOG.md  install_precommit.py  mcp_registry.json  registry.json  ruff.toml  setup_remotes.py  token_budget.json  v0_baseline.md
_AURORA/: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
_AURORA/.github/workflows/: ci.yml
_AURORA/archive/: AURORA_v0.2.0_SUMMARY.md  QUICK_START_v0.2.0.md  README.md  WORKFLOW_DIAGRAM_v0.2.0.md
_AURORA/creative_direction/: README.md
_AURORA/creative_direction/learnings/: trends.md
_AURORA/creative_direction/templates/: creative_brief.md  mood_board.md  style_extraction.md
_AURORA/design_system/master/: guidelines.md  motion.md  tokens.json
_AURORA/docs/: AURORA_PRD.md  onboarding.md  process.md
_AURORA/inspiration/: library.json  sources.md
_AURORA/learnings/: anti_patterns.md  decisions.md  feedback_log.md  metrics.md
_AURORA/patterns/: _index.md
_AURORA/specs/: README.md
_AURORA/tests/: test_creative_direction.py  test_spec_core_behaviors.py
(+245 files in other folders)
